Some changes are added

--- a/den.html
+++ b/den.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <title>image4io</title>
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='swagger.json'></redoc>
-    <script src="./java.js"> </script>
+    <redoc spec-url='https://raw.githubusercontent.com/durman16/redoc/master/swagger.json'></redoc>
+    <script src="https://raw.githubusercontent.com/durman16/redoc/master/java.js"> </script>
   </body>
 </html>
