--- a/den.html
+++ b/den.html
@@ -19,6 +19,6 @@
   </head>
   <body>
     <redoc spec-url='https://raw.githubusercontent.com/durman16/redoc/master/swagger.json'></redoc>
-    <script src="https://raw.githubusercontent.com/durman16/redoc/master/java.js"> </script>
+    <script src="./java.js"> </script>
   </body>
 </html>
