--- a/den.html
+++ b/den.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='https://raw.githubusercontent.com/durman16/redoc/master/swagger.json'></redoc>
+    <redoc spec-url='https://raw.githubusercontent.com/durman16/redoc/master/API.postman_collection.json'></redoc>
     <script src="./java.js"> </script>
   </body>
 </html>
